--- a/historia.html
+++ b/historia.html
@@ -16,7 +16,7 @@
             <a href="historia.html">historia</a>
             <a href="quienes.html">quienes somos</a>
             <a href="produc.html">productos o servicion</a>
-            <a href="#">ofertas</a>
+            <a href="ofertas.html">ofertas</a>
             <a href="#">contactanos</a>
         </nav>
     </header>
