--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="index.html">inicio</a>
             <a href="historia.html">historia</a>
             <a href="quienes.html">quienes somos</a>
-            <a href="produc.html">productos o servicion</a>
+            <a href="produc.html">productos o servicio</a>
             <a href="ofertas.html">ofertas</a>
             <a href="#">contactanos</a>
         </nav>
