--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="content">
             <h1>Bienbenido a la pagina oficial de</h1>
             <h1>TOYOTA</h1>
-            <p>con sosotros podras encontrar variedad de automoviles para tu 
+            <p>con nosotros podras encontrar variedad de automoviles para tu 
                 tus gustos y necesidades. con gran capacidad de kilometraje por litro
                 y manteniendo el confort y la potencia para todo tipo de carretera. a donde quiera que tu bayas toyota te acompañará.
     
