--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <div class="content">
-            <h1>Bienbenido a la pagina oficial de</h1>
+            <h1>Bienvenido a la pagina oficial de</h1>
             <h1>TOYOTA</h1>
             <p>con nosotros podras encontrar variedad de automoviles para tu 
                 tus gustos y necesidades. con gran capacidad de kilometraje por litro
